tests/snapshots/parser_error_fixtures/exposing_star_instead_of_dotdot.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/exposing_star_instead_of_dotdot.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Invalid Exposing List

Expected identifier in `exposing` list.

  examples/parser_errors/exposing_star_instead_of_dotdot.flx:1:22
  |
1 | import Foo exposing (*)
  |                      ^

Hint:
  Use `exposing (name1, name2)` to expose specific members.
== stdout ==
<not executed>
