tests/snapshots/parser_error_fixtures/implicit_row_var_after_plus.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/implicit_row_var_after_plus.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Unexpected Token

Implicit row variables are no longer supported in `with` clauses.

  examples/parser_errors/implicit_row_var_after_plus.flx:1:28
  |
1 | fn main() -> Int with IO + e {
  |                            ^

Hint:
  Rewrite using an explicit tail variable: `with |e`.

Note:
  while parsing function `main`
== stdout ==
<not executed>
