tests/snapshots/parser_error_fixtures/malformed_data_constructor_fields.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/malformed_data_constructor_fields.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Constructor Field Separator

I was expecting `,` or `)` between constructor fields, but I found an identifier.

  examples/parser_errors/malformed_data_constructor_fields.flx:2:12
  |
2 |     Ok(Int String),
  |            ^^^^^^

Note:
  while parsing data declaration `Result`
== stdout ==
<not executed>
