tests/snapshots/parser_error_fixtures/missing_bracket.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_bracket.flx
== compile ==
failed (parse)
== diagnostics ==
error[E076]: Missing Closing Delimiter

Expected a closing `]` to match this opening `[`.

  examples/parser_errors/missing_bracket.flx:8:14
  |
8 |     let xs = [1, 2, 3
  |              ^

Note:
  while parsing function `main`

note: Expected `]` before this token.
  examples/parser_errors/missing_bracket.flx:9:5
  |
9 |     print(xs)
  |     ^^^^^
== stdout ==
<not executed>
